** (2012-12-19) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Architecturing puppet
	- Adding puppet information in cfg/ location

** (2012-12-18) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Update puppet for multi-master setup

** (2012-12-17) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Finish off DNSSEC-related operations
	- Add in Puppet/Git chapter for central configuration management

** (2012-12-16) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Added in regular operations view, enhanced zone handling to use domain
	  as file name.

** (2012-12-13) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Updates on BIND, attempt to use a more structural approach on the
	  components.

** (2012-11-01) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Drop Ganeti docs, focus on KVM only for now
	- Start with MySQL doc

** (2012-08-17) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Information about Postfix mailinfrastructure

** (2012-08-16) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Finish certificate chapter, start working on database chapter
	- Dropped JBoss for now (EJBCA was the driver for it, but EJBCA 
	  doesn't seem to be easily manageable whereas the plain openssl
	  commands do).
	- Start working on mail infrastructure chapter

** (2012-05-13) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Drop references to security benchmark, too little time :-(

** (2012-04-22) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Update on JBoss

** (2012-04-21) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Start on NFSv4

** (2012-04-20) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Use diagram.ly drawings from now on
	- Update on BIND and certificate management

** (2012-04-14) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Update DNS (BIND), update on IPv6-specifics
	- Revert DHCP back to a "normal" setup, failover in IPv6 is not
	  supported yet
	- Start writing up on certificates

** (2012-04-12) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Adding some images and architecturing information