@@ -1,4 +1,5 @@
-# File managed by puppet
+## File managed by puppet, please do not modify manually.
+
 127.0.0.1	local.virtdomain local
 192.168.100.1	gateway.virtdomain gateway
 
