@@ -1,3 +1,7 @@
+## Managed by Puppet, please do not modify manually.
+## Instead use a separate file
+
 # We need to do this as current stable lvm2 does
 # not build properly with the static-libs pcre/libselinux
 =sys-fs/lvm2-2.02.93-r1 ~amd64
+
