@@ -1,4 +1,4 @@
-# File managed by puppet
+## File managed by puppet. Please do not modify manually.
 
 source /var/lib/layman/make.conf
 USE="-ldap -gtk -xorg -pppd mysql imap ipv6 libwww maildir sasl ssl unicode xml apache2 -gpm ubac bcmath gd sockets truetype agent png -sqlite3 device-mapper dlz"
