@@ -1,3 +1,4 @@
+## File managed by Puppet. Please do not modify manually.
 config_eth0="<%= ipaddress6 %>/48 <%= ipaddress %>/24"
-dns_servers="<%= dns_servers %>"
+dns_servers="<% dns_servers.each do |server| -%><%= server %> <% end -%>"
 routes_eth0="default via <%= defaultgw %>"
