@@ -10,7 +10,6 @@
     # Where SSL certificates are kept.
     # The default value is '$confdir/ssl'.
     ssldir = $vardir/ssl
-    libdir=/etc/puppet/modules/portage/lib
 
 [master]
     bindaddress="::"
