@@ -55,12 +55,12 @@
 	offsite knowledge storage ;-)
       </para>
       <para>
-        The version you are reading currently is v0.13 and has been generated
-	on 2012/12/19.
+        The version you are reading currently is v0.14 and has been generated
+	on 2012/12/21.
       </para>
     </abstract>
 
-    <edition>GLARA v0.13</edition> <!-- Update above paragraph too!! -->
+    <edition>GLARA v0.14</edition> <!-- Update above paragraph too!! -->
 
     <copyright>
       <year>2012</year>
