@@ -1,3 +1,8 @@
+** (2012-12-21) Sven Vermeulen <sven.vermeulen@siphos.be>
+	- Update example puppet settings
+	- Add some information on the puppet files (site, node, patterns,
+	  modules)
+
 ** (2012-12-19) Sven Vermeulen <sven.vermeulen@siphos.be>
 	- Architecturing puppet
 	- Adding puppet information in cfg/ location
